--- a/aviutl/aviutl.ini
+++ b/aviutl/aviutl.ini
@@ -1,20 +1,20 @@
 [exedit.aui]
-file=C:\Users\yukku\Desktop\youtube\aviutl\exedit.aui
-check=2019/03/05 15:19:24 49152
+file=Z:\GitHub\porntimes\aviutl\exedit.aui
+check=2019/11/01 04:33:38 49152
 flag=3
 name=拡張編集 File Reader
 filefilter=拡張編集 File (*.exedit)\*.exedit\
 information=拡張編集 File Reader version 0.01 By ＫＥＮくん
 [aviutl.vfp]
-file=C:\Users\yukku\Desktop\youtube\aviutl\aviutl.vfp
-check=2019/03/05 15:19:10 479232
+file=Z:\GitHub\porntimes\aviutl\aviutl.vfp
+check=2019/11/01 04:33:34 479232
 flag=3
 name=AviUtl ProjectFile Reader 1.00
 filefilter=AviUtl ProjectFile (*.aup)\*.aup\
 information=AviUtl ProjectFile Reader 1.00
 [cvid(iccvid.dll)]
 file=iccvid.dll
-check=2019/03/19 04:46:08 84992
+check=2010/11/21 03:25:10 82944
 flag=253
 name=Cinepak Codec by Radius
 quality=10000
@@ -22,7 +22,7 @@ keyframe=15
 datarate=300
 [i420(iyuv_32.dll)]
 file=iyuv_32.dll
-check=2019/03/19 04:46:06 49152
+check=2010/11/21 03:23:50 50176
 flag=17
 name=Intel IYUV コーデック
 quality=0
@@ -30,7 +30,7 @@ keyframe=0
 datarate=0
 [iyuv(iyuv_32.dll)]
 file=iyuv_32.dll
-check=2019/03/19 04:46:06 49152
+check=2010/11/21 03:23:50 50176
 flag=17
 name=Intel IYUV コーデック
 quality=0
@@ -38,12 +38,12 @@ keyframe=0
 datarate=0
 [mrle(msrle32.dll)]
 file=msrle32.dll
-check=2019/03/19 04:46:06 14848
+check=2010/11/21 03:24:28 13312
 flag=0
 name=Microsoft RLE
 [msvc(msvidc32.dll)]
 file=msvidc32.dll
-check=2019/03/19 04:46:06 33280
+check=2010/11/21 03:24:28 31744
 flag=377
 name=Microsoft Video 1
 quality=7500
@@ -51,35 +51,35 @@ keyframe=15
 datarate=0
 [uyvy(msyuv.dll)]
 file=msyuv.dll
-check=2019/03/19 04:46:06 23552
+check=2010/11/21 03:23:50 22528
 flag=0
 name=Microsoft YUV
 [yvu9(tsbyuv.dll)]
 file=tsbyuv.dll
-check=2019/03/19 04:46:06 13312
+check=2010/11/21 03:23:50 12288
 flag=0
 name=Toshiba YUV Codec
 [yvyu(msyuv.dll)]
 file=msyuv.dll
-check=2019/03/19 04:46:06 23552
+check=2010/11/21 03:23:50 22528
 flag=0
 name=Microsoft YUV
 [exedit.auo]
-file=C:\Users\yukku\Desktop\youtube\aviutl\exedit.auo
-check=2019/03/05 15:19:24 73728
+file=Z:\GitHub\porntimes\aviutl\exedit.auo
+check=2019/11/01 04:33:38 73728
 flag=256
 name=拡張編集AVI/BMP出力 (RGBA)
 filefilter=AviFile (*.avi)\*.avi\BmpFile (*.bmp)\*.bmp\AllFile (*.*)\*.*\
 information=拡張編集AVI/BMP出力 (RGBA) version 0.03 By ＫＥＮくん
 [edit]
 config=デフォルト
-file=C:\Users\yukku\Videos\Captures\Minecraft 2019-10-15 23-20-07.mp4
+file=1920x1080_60fps_44100Hz.exedit
 project=
 audioext=
 keyfrext=.txt
 priority=0
-history0=C:\Users\yukku\Videos\Captures\Minecraft 2019-10-15 23-20-07.mp4
-history1=1920x1080_60fps_44100Hz.exedit
+history0=1920x1080_60fps_44100Hz.exedit
+history1=C:\Users\yukku\Videos\Captures\Minecraft 2019-10-15 23-20-07.mp4
 history2=C:\Users\yukku\Desktop\100MEDIA\SUNP0004.avi
 history3=C:\Users\yukku\Desktop\100MEDIA\SUNP0005.avi
 history4=E:\DCIM\100MEDIA\SUNP0000.avi
@@ -152,9 +152,9 @@ w=1020
 h=453
 config_x=106
 config_y=325
-x=80
-y=224
-disp=1
+x=268
+y=469
+disp=0
 [ノイズ除去フィルタ]
 x=0
 y=96
@@ -212,10 +212,10 @@ x=0
 y=408
 disp=0
 [window]
-x=2236
-y=388
-w=480
-h=395
+x=811
+y=107
+w=976
+h=693
 zoom=1
 audio=1
 preview=0
@@ -228,7 +228,7 @@ time=0
 nofilter=0
 datarate=0
 sizeauto=1
-maximize=1
+maximize=0
 [system]
 batchlist=
 batchdelete=1
@@ -292,16 +292,16 @@ priority=6
 [AviUtl ProjectFile Reader 1.00]
 priority=7
 [lwinput.aui]
-file=C:\Users\yukku\Desktop\youtube\aviutl\plugins\lwinput.aui
-check=2019/03/05 15:28:40 14235648
+file=Z:\GitHub\porntimes\aviutl\plugins\lwinput.aui
+check=2019/11/01 04:33:33 14235648
 flag=259
 name=L-SMASH Works File Reader
 filefilter=MPEG-4 File (*.mp4;*.m4v;*.m4a;*.mov;*.qt;*.3gp;*.3g2;*.f4v;*.ismv;*.isma)\*.mp4;*.m4v;*.m4a;*.mov;*.qt;*.3gp;*.3g2;*.f4v;*.ismv;*.isma\LW-Libav Index File (*.lwi)\*.lwi\Any File (*.*)\*.*\
 information=L-SMASH Works File Reader r935
 [x264guiEx.auo]
 filefilter=All Support Formats (*.*)\*.mp4;*.mkv;*.264;*.mp4\mp4 file (*.mp4)\*.mp4\mkv file (*.mkv)\*.mkv\raw file (*.264)\*.264\
-file=C:\Users\yukku\Desktop\youtube\aviutl\plugins\x264guiEx.auo
-check=2019/03/05 15:51:42 1035776
+file=Z:\GitHub\porntimes\aviutl\plugins\x264guiEx.auo
+check=2019/11/01 04:33:34 1035776
 flag=256
 name=拡張 x264 出力(GUI) Ex
 information=拡張 x264 出力(GUI) Ex (x264guiEx) 2.59 by rigaya
